# fluxion

./: Cargo.toml  README.md  rustfmt.toml
crates/backend-cpu/: Cargo.toml
crates/backend-cpu/src/: buffer.rs  lib.rs  ops.rs
crates/backend-cuda/: Cargo.toml
crates/backend-hip/: Cargo.toml  build.rs  build.toml
crates/backend-hip/src/: backend.rs  buffer.rs  error.rs  ffi.rs  graph.rs  lib.rs
crates/backend-hip/tests/: graph.rs
crates/backend-wgpu/: Cargo.toml
crates/backend-wgpu/src/: buffer.rs  context.rs  error.rs  lib.rs  ops.rs
crates/bench/: Cargo.toml
crates/bench/benches/: bandwidth.rs  operations.rs  scaling.rs  solver.rs  stencil.rs
crates/bench/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  boundary.rs  dtype.rs  error.rs  grid.rs  lib.rs  operator.rs  stencil.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs  raw.rs  vtk.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: adaptive.rs  bdf.rs  bicgstab.rs  cg.rs  device.rs  error.rs  field.rs  gmres.rs  imex.rs  implicit.rs  lib.rs  linear_solver.rs  multigrid.rs  pipelined_cg.rs  preconditioner.rs  solver.rs  ssp_rk.rs  storage.rs
crates/runtime/tests/: analytical.rs  convergence.rs  error_handling.rs  hip_advanced_bench.rs  hip_bench.rs  hip_full_bench.rs  hip_gpu.rs  hip_graph.rs  manufactured.rs  properties.proptest-regressions  properties.rs  solvers.rs  stability.rs
kernels/hip/: convection_diffusion.hip  elementwise.hip  fused_stencil_axpy.hip  multigrid.hip  reduce.hip  stencil_2d.hip
kernels/hip/rocPRIM/rocprim/include/rocprim/: rocprim_version.hpp
kernels/wgsl/: axpy.wgsl  dot_product.wgsl  fill.wgsl  fused_stencil_axpy.wgsl  jacobi.wgsl  prolong.wgsl  reduce_max.wgsl  reduce_min.wgsl  reduce_sum.wgsl  reduce_sum_sq.wgsl  restrict.wgsl  scale.wgsl  stencil_2d.wgsl  vecops.wgsl
