[package]
name = "fluxion-backend-cpu"
description = "CPU reference backend (faer)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-core = { workspace = true }
faer = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
